<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".InstructionsPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/backArrow"
            android:layout_width="14dp"
            android:layout_height="32dp"
            app:layout_constraintEnd_toStartOf="@id/translator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/lesser_sign"
            android:onClick="backArrow"
            android:textAppearance="@style/header_arrow_style" />

        <TextView
            android:id="@+id/translator"
            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:text="@string/instructions"
            android:textAppearance="@style/translator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/backArrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerPart">

        <TextView
            android:id="@+id/choose_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:gravity="center"
            android:text="@string/choose_language_instruction"
            android:fontFamily="@font/nunito_small"
            android:textFontWeight="600"
            android:textSize="22dp"
            android:lineHeight="32.5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:gravity="center"
            android:text="@string/text_input_instruction"
            android:fontFamily="@font/nunito_small"
            android:textFontWeight="600"
            android:textSize="22dp"
            android:lineHeight="32.5dp"
            app:layout_constraintTop_toBottomOf="@id/choose_language"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/translateOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:gravity="center"
            android:text="@string/translation_output_instruction"
            android:fontFamily="@font/nunito_small"
            android:textFontWeight="600"
            android:textSize="22dp"
            android:lineHeight="32.5dp"
            app:layout_constraintTop_toBottomOf="@id/textInput"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/copySave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:gravity="center"
            android:text="@string/save_copy_instruction"
            android:fontFamily="@font/nunito_small"
            android:textFontWeight="600"
            android:textSize="22dp"
            android:lineHeight="32.5dp"
            app:layout_constraintTop_toBottomOf="@id/translateOutput"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>