<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomePage"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/homePicture"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/homePageHeader">

        <ImageView
            android:id="@+id/homeImage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <TextView
        android:id="@+id/homePageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:lineHeight="98.21dp"
        android:text="@string/translator"
        android:textSize="55sp"
        android:textColor="@color/home_screen_header"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePicture" />

    <TextView
        android:id="@+id/homePageDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/nunito_small"
        android:textFontWeight="600"
        android:lineHeight="15sp"
        android:text="@string/home_page_description"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePageHeader" />

    <TextView
        android:id="@+id/readInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/read_instructions"
        android:fontFamily="@font/nunito_small"
        android:textFontWeight="600"
        android:textSize="18sp"
        android:lineHeight="32.74dp"
        style="@style/read_instructions"
        android:textAlignment="center"
        android:onClick="goToInstructions"
        app:layout_constraintTop_toBottomOf="@id/homePageDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homePageButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/translatePageButton"
            android:layout_width="115dp"
            android:layout_height="45dp"
            android:background="@drawable/speak_translate_button"
            android:onClick="goToTranslatePage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/myTranslationsPageButton"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/homePageTranslateButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToTranslatePage"
                android:paddingStart="20dp"
                android:text="@string/translate"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/homeTranslateArrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/homeTranslateArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/greater_sign"
                android:textColor="@color/white"
                android:onClick="goToTranslatePage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/homePageTranslateButtonText"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/myTranslationsPageButton"
            android:layout_width="132dp"
            android:layout_height="45dp"
            android:background="@drawable/speak_translate_button"
            android:onClick="goToMyTranslationsPage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/translatePageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/homePageMyTranslationButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/my_translations"
                android:textColor="@color/white"
                android:onClick="goToMyTranslationsPage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/homeMyTranslationArrow"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/homeMyTranslationArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greater_sign"
                android:textColor="@color/white"
                android:onClick="goToMyTranslationsPage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/homePageMyTranslationButtonText"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>