<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context="MainActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/backArrow"
            android:layout_width="14dp"
            android:layout_height="32dp"
            app:layout_constraintEnd_toStartOf="@id/translator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/lesser_sign"
            android:onClick="backArrow"
            android:textAppearance="@style/header_arrow_style" />

        <TextView
            android:id="@+id/translator"
            android:layout_width="172dp"
            android:layout_height="49dp"
            android:onClick="backArrow"
            app:layout_constraintStart_toEndOf="@id/backArrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/translator"
            android:textAppearance="@style/translator" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/spinnerPart"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/headerPart"
        tools:layout_editor_absoluteX="20dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/spinner_shape"
            android:popupBackground="@drawable/spinner_shape"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinner2"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:background="@drawable/spinner_shape"
            android:popupBackground="@drawable/spinner_shape"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toEndOf="@id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputTextPart"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/textField"
        app:layout_constraintTop_toBottomOf="@id/spinnerPart"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <EditText
            android:id="@+id/originalText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@id/inputTextPart"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:hint="@string/input_text"
            android:gravity="top"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/speakTranslatePart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/inputTextPart"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/speakButton"
            android:layout_width="97dp"
            android:layout_height="40dp"
            android:background="@drawable/speak_translate_button"
            android:onClick="getSpeechInput"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/saveTranslationBtn"
                android:layout_width="29dp"
                android:layout_height="27dp"
                android:background="@drawable/microphone"
                android:text="@string/speak"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/speakText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/speakText"
                android:layout_width="44dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/speak"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.562" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/translateButton"
            android:layout_width="97dp"
            android:layout_height="40dp"
            android:background="@drawable/speak_translate_button"
            android:onClick="getSpeechInput"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/translateText"
                android:layout_width="62dp"
                android:layout_height="22dp"
                android:layout_marginEnd="10dp"
                android:text="@string/translate_button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.604"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outputTextPart"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/textField"
        app:layout_constraintTop_toBottomOf="@id/speakTranslatePart"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <EditText
            android:id="@+id/translatedText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="@id/outputTextPart"
            android:background="@android:color/transparent"
            android:hint="@string/output_text"
            android:gravity="top"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/saveCopyReadPart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/outputTextPart"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/saveButton"
            android:layout_width="97dp"
            android:layout_height="40dp"
            android:background="@drawable/save_copy_read_buttons"
            android:onClick="saveTranslation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cloudImage"
                android:layout_width="29dp"
                android:layout_height="27dp"
                android:background="@drawable/save_vector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/saveText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/saveText"
                android:layout_width="44dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.562" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/copyButton"
            android:layout_width="97dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/save_copy_read_buttons"
            android:onClick="setClipboard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/saveButton"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/copyImage"
                android:layout_width="29dp"
                android:layout_height="27dp"
                android:background="@drawable/copy_vector"
                android:text="@string/speak"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/copyText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/copyText"
                android:layout_width="44dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/copy_button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.562" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/readButton"
            android:layout_width="97dp"
            android:layout_height="40dp"
            android:background="@drawable/speak_translate_button"
            android:onClick="readTranslatedText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/readText"
                android:layout_width="62dp"
                android:layout_height="22dp"
                android:layout_marginEnd="10dp"
                android:text="@string/read_button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.604"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>